@startuml CBT_System_Class_Diagram
!theme plain
skinparam backgroundColor white
skinparam defaultFontSize 11

' Class styling
skinparam class {
  BackgroundColor #E3F2FD
  BorderColor #1976D2
  ArrowColor #1976D2
}

title Class Diagram - CBT System

' Enums
enum Gender {
  Laki_Laki
  Perempuan
}

enum Role {
  ADMIN
  PESERTA
}

' User Class
class User {
  - id: String
  - nama: String
  - email: String
  - password: String
  - tempatLahir: String
  - jenisKelamin: Gender
  - role: Role
  - createdAt: DateTime
  - updatedAt: DateTime
  __
  + User(data: UserCreateInput)
  + toDTO(): UserDTO
  + validatePassword(password: String): Boolean
  + updateProfile(data: UserUpdateInput): User
  + changePassword(newPassword: String): User
  ~ hashPassword(password: String): String
}

' Exam Class
class Exam {
  - id: String
  - userId: String
  - title: String
  - subject: String
  - duration: Int
  - passingScore: Int
  - startDate: DateTime
  - endDate: DateTime
  - status: String
  - createdAt: DateTime
  - updatedAt: DateTime
  __
  + Exam(data: ExamCreateInput)
  + toDTO(): ExamDTO
  + publish(): Exam
  + unpublish(): Exam
  + isActive(): Boolean
  + isExpired(): Boolean
  + updateExam(data: ExamUpdateInput): Exam
  + getQuestions(): Question[]
  + getResults(): ExamResult[]
  ~ validateDuration(): Boolean
}

' Question Class
class Question {
  - id: String
  - examId: String
  - questionText: String
  - optionA: String
  - optionB: String
  - optionC: String
  - optionD: String
  - correctAnswer: String
  - difficultyLevel: String
  - questionOrder: Int
  - createdAt: DateTime
  - updatedAt: DateTime
  __
  + Question(data: QuestionCreateInput)
  + toDTO(): QuestionDTO
  + toDTOWithoutAnswer(): QuestionDTOSafe
  + validateAnswer(answer: String): Boolean
  + updateQuestion(data: QuestionUpdateInput): Question
  + setOrder(order: Int): Question
  ~ validateOptions(): Boolean
}

' ExamResult Class
class ExamResult {
  - id: String
  - examId: String
  - userId: String
  - score: Int
  - startTime: DateTime
  - endTime: DateTime
  - status: String
  - isPassed: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
  __
  + ExamResult(examId: String, userId: String)
  + toDTO(): ExamResultDTO
  + start(): ExamResult
  + complete(): ExamResult
  + calculateScore(): Int
  + updateScore(score: Int): ExamResult
  + checkPassed(passingScore: Int): Boolean
  + getAnswers(): Answer[]
  + getTimeTaken(): Int
  ~ validateStatus(): Boolean
}

' Answer Class
class Answer {
  - id: String
  - examResultId: String
  - questionId: String
  - selectedAnswer: String
  - isCorrect: Boolean
  - createdAt: DateTime
  __
  + Answer(data: AnswerCreateInput)
  + toDTO(): AnswerDTO
  + validate(correctAnswer: String): Answer
  + updateAnswer(selectedAnswer: String): Answer
  ~ checkCorrectness(): Boolean
}

' Relationships
User "1" -- "*" Exam : creates >
User "1" -- "*" ExamResult : takes >

Exam "1" -- "*" Question : has >
Exam "1" -- "*" ExamResult : generates >

ExamResult "1" -- "*" Answer : contains >

Question "1" -- "*" Answer : answered in >

User ..> Gender : uses
User ..> Role : uses

' Notes
note right of User
  **DTO Pattern:**
  toDTO() removes sensitive data
  like password before sending
  to frontend
  
  **Admin vs Peserta:**
  Role determines access level
  and available operations
end note

note right of Exam
  **Exam Lifecycle:**
  1. Created (Draft)
  2. Published (Active)
  3. Expired (Past endDate)
  
  **Validation:**
  - duration > 0
  - passingScore <= 100
  - startDate < endDate
end note

note right of Question
  **Question Shuffling:**
  Fisher-Yates algorithm
  with seed-based randomization
  preserves order per user
  
  **Security:**
  toDTOWithoutAnswer() hides
  correctAnswer from peserta
end note

note right of ExamResult
  **Score Calculation:**
  score = correctAnswers / totalQuestions * 100
  
  **Status Flow:**
  1. IN_PROGRESS (start)
  2. COMPLETED (submit)
  3. ABANDONED (timeout)
  
  isPassed = score >= passingScore
end note

note bottom of Answer
  **Real-time Validation:**
  Each answer validated immediately
  isCorrect flag set on creation
  
  Used for final score calculation
  and answer review
end note

' Design Patterns Legend
legend right
  **Design Patterns Used:**
  - DTO (Data Transfer Object)
  - Builder Pattern (constructors)
  - Validation Pattern (validate methods)
  - Repository Pattern (data access)
  
  **Visibility:**
  + Public
  - Private
  ~ Package/Protected
endlegend

@enduml
